--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <span class="status">Unofficial</span>
                 </div>
         
-                <img src="‎/sources/LOS21TD.jpg‎" alt="Lineage OS 21" class="main-image">
+                <img src="‎sources/LOS21TD.jpg‎" alt="Lineage OS 21" class="main-image">
         
                 <h1>LineageOS 21 — UNOFFICIAL</h1>
                 <div class="details">
@@ -695,4 +695,5 @@
 </body>
 
 </html>
+
 
