Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <span class="status">Unofficial</span>
                 </div>
         
-                <img src="‎sources/LOS21TD.jpg‎" alt="Lineage OS 21" class="main-image">
+                <img src="‎https://raw.githubusercontent.com/sheffthechef/a3core-development/refs/heads/main/sources/LOS21TD.jpg" alt="Lineage OS 21" class="main-image">
         
                 <h1>LineageOS 21 — UNOFFICIAL</h1>
                 <div class="details">
@@ -695,5 +695,6 @@
 </body>
 
 </html>
+
 
 
